--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "dsx-folder-templates",
   "version": "0.0.1",
   "type": "module",
-  "description": "A use case of the Dropbox Solutions Accelerators project. This solution creates folder structures from pre-defined templates.",
+  "description": "A use case of the Dropbox Solutions Accelerators project. This solution creates folder structures from pre-defined templates. This is the backend app.",
   "keywords": [
     "dropbox",
     "accelerators",
     "dsx",
     "folder template",
-    "folder structure"
+    "folder structure",
+    "backend"
   ],
   "license": "MIT",
   "repository": {
@@ -27,11 +28,11 @@
     "node": ">=0.10.3"
   },
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
   "dependencies": {
     "dsx-core": "^0.0.2",
     "express": "^4.18.1"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
