--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dsx-folder-templates",
   "version": "0.0.1",
   "type": "module",
-  "description": "A use case of the Dropbox Solutions Accelerators project. This solution creates folder structures from pre-defined templates. This is the backend app.",
+  "description": "A use case of the Dropbox Solutions Accelerators. This solution creates folder structures from pre-defined templates. This is the backend app.",
   "keywords": [
     "dropbox",
     "accelerators",
@@ -27,12 +27,12 @@
   "engines": {
     "node": ">=0.10.3"
   },
-  "main": "app.js",
+  "main": "main.js",
   "dependencies": {
-    "dsx-core": "^0.0.2",
+    "dsx-core": "^0.0.5",
     "express": "^4.18.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node main.js"
   }
 }
