--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "main": "main.js",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "dsx-core": "^0.0.9",
     "express": "^4.18.1"
   },
